@@ -471,3 +471,4 @@ Views 3.x-7.x-dev
     o #963454 by dereine: Remove related terms data definitions.
     o #976098 by dereine: Fix notice in field field handler render function.
     o #626732 by dereine: Fix analyze ok-button and added a test for it.
+    o #338584 by superbaloo: Allow displays to be re-ordered in the UI.
